...
    <!-- Brick categories -->
    <string name="categories">Categories</string>
    <string name="category_motion">Motion</string>
    <string name="category_looks">Looks</string>
    <string name="category_pen">Pen</string>
    <string name="category_sound">Sound</string>
    <string name="category_control">Control</string>
    <string name="category_event">Event</string>
    <string name="category_user_bricks">My Bricks</string>
    <string name="category_data">Data</string>
    <string name="category_lego_nxt">Lego NXT</string>
    <string name="category_lego_ev3">Lego EV3</string>
    <string name="category_drone">AR.Drone</string>
...
    <string name="brick_speak_default_value">"Hello!"</string>
    <string name="brick_speak_and_wait">and wait</string>
    <!--  -->


    <!-- Control bricks -->
    <string name="brick_when_started">When program starts</string>
    <string name="brick_when">When tapped</string>
    <string name="brick_when_condition_when">When</string>
    <string name="brick_when_becomes_true">becomes true</string>
    <string name="brick_wait">Wait</string>
    <string name="brick_when_gamepad_button">When gamepad button</string>
    <string name="brick_when_gamepad_button_tapped">tapped</string>
    <string name="brick_when_nfc">When NFC</string>
    <string name="brick_stop_script">Stop</string>
    <string name="brick_stop_this_script">this script</string>
    <string name="brick_stop_all_scripts">all scripts</string>
...

    <string name="brick_broadcast_receive">When you receive</string>
    <string name="brick_broadcast">Broadcast</string>
    <string name="brick_broadcast_wait">Broadcast and wait</string>
    <string name="brick_scene_transition">Continue scene</string>
    <string name="brick_scene_start">Start scene</string>
    <string name="brick_note">Note</string>
    <string name="brick_think_bubble">Think</string>
    <string name="brick_say_bubble">Say</string>
    <string name="brick_think_say_for_text">for</string>
    <string name="brick_forever">Forever</string>
    <string name="brick_repeat">Repeat</string>
    <string name="brick_repeat_until">Repeat until</string>
...
